--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,23 @@
 <resources>
     <string name="app_name">AssignmentVI_Intent</string>
+    <string name="action_settings">Settings</string>
+    <string name="username_label">Please enter your username:</string>
+    <string name="btn_submit_txt">Submit</string>
+    <string name="btn_login_txt">Login</string>
+    <string name="username_txt">Username is:</string>
+    <string name="login_username_txt">Please type username:</string>
+    <string name="title_activity_login">Login Activity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_new_login">NewLoginActivity</string>
+    <string name="title">Title</string>
+    <string name="search">Search</string>
+    <string name="place">Place</string>
+    <string name="participants_comma_separated">Participants (comma-separated)</string>
+    <string name="date_e_g_2025_04_07">Date (e.g. 2025-04-07)</string>
+    <string name="time_e_g_14_00">Time (e.g. 14:00)</string>
+    <string name="submit">Submit</string>
+    <string name="summary">Summary</string>
+    <string name="update">Update</string>
+
+
 </resources>
